feat: recognise several leading keyword guards on one lexer rule